<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org</groupId>
	<artifactId>bdd.psc</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>jar</packaging>

	<dependencies>
		<dependency>
			<groupId>com.bdd.core</groupId>
			<artifactId>BDD</artifactId>
			<version>1.0.0-SNAPSHOT</version>
		</dependency>
		 <dependency>
		    <groupId>com.fascore.qa.AutomationPageObjects</groupId>
	        <artifactId>PageObjects</artifactId>
	        <version>0.0.1-SNAPSHOT</version>
	     </dependency>
	</dependencies>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	</properties>
	<build>
		<pluginManagement><!-- lock down plugins versions to avoid using Maven 
				defaults (may be moved to parent pom) -->
				<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.18.1</version>
					<configuration>
						<threadCount>1</threadCount>
						<reuseForks>false</reuseForks>
						<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
						<suiteXmlFiles>
							<suiteXmlFile>RunXML/${suiteFile}.xml</suiteXmlFile>
						</suiteXmlFiles>
						<systemProperties>
							<property>
								<name>env</name>
								<value>${env}</value>
							</property>
						</systemProperties>
						<systemProperties>
							<property>
								<name>testDataPath</name>
								<value>${testDataPath}</value>
							</property>
						</systemProperties>
						<systemProperties>
							<property>
								<name>CAPTURESCREENSHOT</name>
								<value>${CAPTURESCREENSHOT}</value>
							</property>
						</systemProperties>
						<systemProperties>
							<property>
								<name>BROWSER</name>
								<value>${BROWSER}</value>
							</property>
						</systemProperties>
						<systemProperties>
							<property>
								<name>type</name>
								<value>${ExecutionMode}</value>
							</property>
						</systemProperties>
					</configuration>
				</plugin>
				<!-- Compiler plugin configures the java version to be used for compiling 
					the code -->
			
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>2.4</version>
					<configuration>
						<source>1.8</source>
						<target>1.8</target>

					</configuration>
				</plugin>

				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>1.9.1</version>
					<executions>
						<execution>
							<id>add-source</id>
							<phase>generate-sources</phase>
							<goals>
								<goal>add-source</goal>
							</goals>
							<configuration>
								<sources>
									<source>src/test/java</source>
									<source>src/main/java</source>
								</sources>
							</configuration>
						</execution>
					</executions>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
</project>
